--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -18,16 +18,20 @@ code {
 
 .logo {
   margin-bottom: 8%;
-  margin-top:10%;
 }
 
 h1 {
-	color: #d54d7b; 
+	color: #1E90FF; 
 	font-family: "Great Vibes", cursive; 
-	font-size: 165px; 
-	line-height: 160px; 
+	font-size: 20%; 
+	line-height: 20%; 
 	font-weight: normal; 
-	text-shadow: 0 1px 1px #fff;
+}
+
+h2 {
+	font-style: italic; 
+	color: #B6B6B6; 
+	font-size: 5%; 
 }
 
 .Checklist {
