--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -23,15 +23,16 @@ code {
 h1 {
 	color: #1E90FF; 
 	font-family: "Great Vibes", cursive; 
-	font-size: 100%; 
-	line-height: 100%; 
+	font-size: 120px; 
+	line-height: 120px; 
 	font-weight: normal; 
 }
 
 h2 {
 	font-style: italic; 
 	color: #B6B6B6; 
-	font-size: 50%; 
+	font-size: 24px; 
+	margin-top: 20px; 
 }
 
 .Checklist {
