--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -21,10 +21,9 @@ code {
 }
 
 h1 {
-	color: #1E90FF; 
+	color: #000080; 
 	font-family: "Great Vibes", cursive; 
 	font-size: 165px; 
-	line-height: 160px; 
 	font-weight: normal; 
 }
 
