--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -17,19 +17,23 @@ code {
 }
 
 .logo {
+  margin-bottom: 8%;
+  height: 30%;
+  background-color: green;
 }
 
 h1 {
 	color: #000080; 
 	font-family: "Great Vibes", cursive; 
-	font-size: 150px; 
-	font-weight: normal; 
+	font-size: 70%; 
+	background-color: purple;
 }
 
 h2 {
 	font-style: italic; 
 	color: #B6B6B6; 
-	font-size: 24px; 
+	font-size: 24px;
+	background-color: brown; 
 }
 
 .Checklist {
