--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,37 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 .App {
   text-align: center;
 }
 
 .logo {
-  height: 80%;
+  height: 100%;
   background-color: green;
 }
 
 h1 {
 	color: #000080; 
 	font-family: "Great Vibes", cursive; 
-	font-size: 90%; 
+	line-height: 90%;
+	font-size: 100%;
 	background-color: purple;
 }
 
 h2 {
 	font-style: italic; 
 	color: #B6B6B6; 
-	font-size: 10%;
+	line-height: 10%;
+	font-size: 100%;
 	background-color: brown; 
 }
 
@@ -39,39 +27,3 @@ h2 {
   display: flex;
   justify-content: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
