--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 .App {
   text-align: center;
 }
@@ -10,16 +24,14 @@
 h1 {
 	color: #000080; 
 	font-family: "Great Vibes", cursive; 
-	line-height: 90%;
-	font-size: 100%;
+	font-size: 90%; 
 	background-color: purple;
 }
 
 h2 {
 	font-style: italic; 
 	color: #B6B6B6; 
-	line-height: 10%;
-	font-size: 100%;
+	font-size: 10%;
 	background-color: brown; 
 }
 
@@ -27,3 +39,39 @@ h2 {
   display: flex;
   justify-content: center;
 }
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #purple;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
