--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -36,8 +36,8 @@ h1 {
 	color: #000080; 
 	font-family: "Great Vibes", cursive; 
 	background-color: purple;
-	width: 320px;
-	height: 320px;
+	width: 100%;
+	height: 100%;
 }
 
 h2 {
