--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -36,7 +36,7 @@ h1 {
 	background-color: purple;
 	width: 100%;
 	height: 100%;
-	font-size:8vw;
+	font-size: 100%;
 }
 
 h2 {
@@ -44,6 +44,7 @@ h2 {
 	color: #B6B6B6; 
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 	font-size: 4vw;
 	background-color: brown; 
 }
